--- a/templates/main.html
+++ b/templates/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Каталог</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
     <h1 class="has-text-weight-bold has-text-centered mt-4 is-size-3">Электронный каталог</h1>
@@ -15,11 +16,8 @@
     {% block content %}
 
 
-
     {% endblock %}
-
     {% include 'pagination.html' %}
-
     </div>
 
 </body>
