--- a/templates/main.html
+++ b/templates/main.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Каталог</title>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="stylesheet" href="/static/css/styles.css">
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'base/css/styles.css' %}">
 </head>
 <body>
+
     <h1 class="has-text-weight-bold has-text-centered mt-4 is-size-3">Электронный каталог</h1>
 
     {% include 'navbar.html' %}
