--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,5 @@
 <!-- Main container -->
-<nav class="level mt-4 mr-6 ml-6">
+<nav class="level-right mr-6 mt-6 mb-6">
   <!-- Left side -->
 
   <div class="level-right">
