--- a/templates/breadcrumb.html
+++ b/templates/breadcrumb.html
@@ -1,8 +1,8 @@
-<nav class="breadcrumb ml-6" aria-label="breadcrumbs">
+<nav class="breadcrumb " aria-label="breadcrumbs">
   <ul>
     <li><a href="#">Bulma</a></li>
     <li><a href="#">Documentation</a></li>
     <li><a href="#">Components</a></li>
-    <li class="is-active"><a href="#" aria-current="page">Breadcrumb</a></li>
+    <li class="is-active"><a href="" aria-current="page">Breadcrumb</a></li>
   </ul>
 </nav>
