--- a/templates/breadcrumb.html
+++ b/templates/breadcrumb.html
@@ -1,8 +1,16 @@
-<nav class="breadcrumb " aria-label="breadcrumbs">
+<nav class="breadcrumb" aria-label="breadcrumbs">
   <ul>
-    <li><a href="#">Bulma</a></li>
-    <li><a href="#">Documentation</a></li>
-    <li><a href="#">Components</a></li>
-    <li class="is-active"><a href="" aria-current="page">Breadcrumb</a></li>
+{#    <li><a href="#">Bulma</a></li>#}
+{#    <li><a href="#">Documentation</a></li>#}
+{#    <li><a href="#">Components</a></li>#}
+{#    <li class="is-active"><a href="" aria-current="page">Breadcrumb</a></li>#}
+{#      {% if  categories%}#}
+{#          <li><a href="">{{ categories.objects.all }}</a></li>#}
+{#      {% endif %}#}
+
+    <li><a href="/">Каталог</a></li>
+      {% for breadcrumb in breadcrumbs %}
+          <li><a href="{{ breadcrumb.url }}">{{ breadcrumb.name }}</a></li>
+      {% endfor %}
   </ul>
 </nav>
