--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -3,16 +3,31 @@
             <div class="card-content">
                 <div class="content">
                     <strong>Каталог</strong><br>
-                    {% for item in items %}
-                        {% if not item.category %}
-                            <a href="{{ item.slug }}/">{{ item }}</a><br>
-                    {% endif %}
-                {% endfor %}
+                    <ul>
+                    {% for category in categories %}
+                        <li><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>
+                        <ul>
+                            {% for ch1 in category.child.all %}
+                                <li><a href="{{ ch1.get_absolute_url }}">{{ ch1.name }}</a></li>
+                                <ul>
+                                {% for thirdLevel in ch1.child.all %}
+                                    <li><a href="{{ thirdLevel.get_absolute_url }}">{{ thirdLevel.name }}</a></li>
+                                    <ul>
+                                    {% for item in items %}
+                                        <li>{{ item }}</li>
+                                    {% endfor %}
+                                    </ul>
+                                {% endfor %}
+                                </ul>
+                            {% endfor %}
+                        </ul>
+                    {% endfor %}
+                    </ul>
             </div>
         </div>
     </div>
-
     </div>
+
     <div class="column is-8">
         <div class="card" style="height: 40rem">
             <div class="card-content">
