--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -3,32 +3,28 @@
             <div class="card-content">
                 <div class="content">
                     <strong>Каталог</strong><br>
-{#                    <ul>#}
-{#                    {% for category in categories %}#}
-{#                        <li><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>#}
-{#                        <ul>#}
-{#                            {% for ch1 in category.child.all %}#}
-{#                                <li><a href="{{ ch1.get_absolute_url }}">{{ ch1.name }}</a></li>#}
-{#                                <ul>#}
-{#                                {% for thirdLevel in ch1.child.all %}#}
-{#                                    <li><a href="{{ thirdLevel.get_absolute_url }}">{{ thirdLevel.name }}</a></li>#}
-{#                                {% endfor %}#}
-{#                                </ul>#}
-{#                            {% endfor %}#}
-{#                        </ul>#}
-{#                    {% endfor %}#}
-{#                    </ul>#}
                     {% include 'categories.html' %}
             </div>
         </div>
     </div>
     </div>
 
-    <div class="column is-8">
-        <div class="card" style="height: 40rem">
-            <div class="card-content">
-                {% include 'breadcrumb.html' %}
-                <div class="content">
+    <div class="column is-8 ">
+        <div class="card " style="height: 40rem">
+            {% include 'breadcrumb.html' %}
+            <div class="card-content is-flex is-flex-wrap-wrap is-align-items-center">
+                {% for item in items %}
+                    <div class="card mt-4 mb-4 ml-4 mr-4" style="width: 150px; height: 220px">
+                        <div class="card-content is-flex is-justify-content-center is-flex-wrap-wrap" >
+                            <img src="/{{ item.image }}" width="100px" height="100px">
+                            <div class="content">
+                                {{ item.desc }}
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                {% endfor %}
             </div>
         </div>
+        {% include 'pagination.html' %}
     </div>
