--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,10 +1,6 @@
 <ul>
 {% for category in categories%}
     <li><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>
-    {% if category.child.all %}
-        {% with categories=category.child.all %}
-            {% include 'categories.html' %}
-        {% endwith %}
-    {% endif %}
+    {% include 'categories.html' with categories=category.child.all %}
 {% endfor %}
 </ul>
