--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -13,12 +13,12 @@
         <div class="card " style="height: 40rem">
             {% include 'breadcrumb.html' %}
             <div class="card-content is-flex is-flex-wrap-wrap is-align-items-center">
-                {% for item in items %}
-                    <div class="card mt-4 mb-4 ml-4 mr-4" style="width: 150px; height: 220px">
+                {% for page in page_obj %}
+                    <div class="card mt-2 mb-4 ml-4 mr-4" style="width: 150px; height: 220px">
                         <div class="card-content is-flex is-justify-content-center is-flex-wrap-wrap" >
-                            <img src="/{{ item.image }}" width="100px" height="100px">
+                            <img src="{{ page.image.url }}" width="100px" height="100px">
                             <div class="content">
-                                {{ item.desc }}
+                                {{ page.desc }}
                             </div>
                         </div>
                     </div>
