--- a/templates/breadcrumb.html
+++ b/templates/breadcrumb.html
@@ -2,7 +2,11 @@
   <ul>
     <li><a href="/">Каталог</a></li>
       {% for breadcrumb in breadcrumbs %}
-          <li><a href="{{ breadcrumb.url }}">{{ breadcrumb.name }}</a></li>
+          {% if breadcrumb == breadcrumbs|last %}
+              <li><a href="{{ breadcrumb.url }}" class="disabled">{{ breadcrumb.name }}</a></li>
+          {% else %}
+              <li><a href="{{ breadcrumb.url }}">{{ breadcrumb.name }}</a></li>
+          {% endif %}
       {% endfor %}
   </ul>
 </nav>
