--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,7 @@
 
     <div class="level-item">
       <div class="field has-addons">
-          <form action="{% url 'search' %}" method="GET">
+          <form action="{% url "search" %}" method="GET">
                 <input class="input" type="text" placeholder="Найти товар" name="search">
                 <button class="button">Поиск</button>
           </form>
