--- a/templates/main.html
+++ b/templates/main.html
@@ -5,14 +5,14 @@
     <title>Каталог</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     {% load static %}
-    <link rel="stylesheet" href="{% static 'base/style.css' %}">
+    <link rel="stylesheet" href="{% static "base/style.css" %}">
 </head>
 <body>
-    {% include 'navbar.html' %}
+    {% include "navbar.html" %}
     <div class="columns">
 
         {% block content %}
-        {% include 'catalog.html' %}
+        {% include "catalog.html" %}
 
         {% endblock %}
     </div>
