--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,6 +1,6 @@
 <ul>
 {% for category in categories %}
     <li><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>
-    {% include "categories.html" with categories=category.child.all %}
+    {% include "categories.html" with categories=category.child %}
 {% endfor %}
 </ul>
