--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,6 +1,6 @@
 <ul>
 {% for category in categories %}
-    <li><a href="{{ category.slug }}">{{ category.name }}</a></li>
+    <li><a href="{{ category.path }}">{{ category.name }}</a></li>
     {% include "categories.html" with categories=category.child %}
 {% endfor %}
 </ul>
