--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,3 +1,34 @@
+{#    <div class="column is-3 ml-6" >#}
+{#        <div class="card" style="height: 40rem">#}
+{#            <div class="card-content">#}
+{#                <div class="content">#}
+{#                    <strong>Каталог</strong><br>#}
+{#                    {% include "categories.html" %}#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#    </div>#}
+{#    <div class="column is-8 ">#}
+{#        <div class="card " style="height: 40rem">#}
+{#            {% include "breadcrumb.html" %}#}
+{#            <div class="card-content is-flex is-flex-wrap-wrap is-align-items-center">#}
+{#                {% for item in page.items %}#}
+{#                    <div class="card mt-2 mb-4 ml-4 mr-4" style="width: 150px; height: 220px">#}
+{#                        <div class="card-content is-flex is-justify-content-center is-flex-wrap-wrap" >#}
+{#                            <img src="/media/{{ item.image }}" width="100px" height="100px">#}
+{#                            <div class="content">#}
+{#                                {{ item.desc }}#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <br>#}
+{#                {% endfor %}#}
+{#            </div>#}
+{#        </div>#}
+{#        {% include "pagination.html" %}#}
+{#    </div>#}
+
+
     <div class="column is-3 ml-6" >
         <div class="card" style="height: 40rem">
             <div class="card-content">
@@ -15,7 +46,7 @@
                 {% for item in page.items %}
                     <div class="card mt-2 mb-4 ml-4 mr-4" style="width: 150px; height: 220px">
                         <div class="card-content is-flex is-justify-content-center is-flex-wrap-wrap" >
-                            <img src="{{ item.try_image.url }}" width="100px" height="100px">
+                            <img src="/media/{{ item.image }}" width="100px" height="100px">
                             <div class="content">
                                 {{ item.desc }}
                             </div>
