--- a/templates/main.html
+++ b/templates/main.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     {% load static %}
     <link rel="stylesheet" href="{% static "base/style.css" %}">
+    <script type="text/javascript" src="{% static "base/jquery-3.6.0.min.js" %}"></script>
+    <script type="text/javascript" src="{% static "base/script.js" %}"></script>
 </head>
 <body>
     {% include "navbar.html" %}
