--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,6 +1,6 @@
 <ul>
 {% for category in categories %}
-    <li><a href="{% if category.path %}{{ category.path }}{% else %}{{ category.get_absolute_url }}{% endif %}">{{ category.name }}</a></li>
+    <li><a class="catalog_link" href="{% if category.path %}{{ category.path }}{% else %}{{ category.get_absolute_url }}{% endif %}">{{ category.name }}</a></li>
     {% include "categories.html" with categories=category.child %}
 {% endfor %}
 </ul>
