--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -11,7 +11,7 @@
     <div class="column is-8 ">
         <div class="card " style="height: 40rem">
             {% include "breadcrumb.html" %}
-            <div class="card-content is-flex is-flex-wrap-wrap is-align-items-center">
+            <div class="card-content is-flex is-flex-wrap-wrap is-align-items-center" id="catalog">
                 {% for item in page.items %}
                     <div class="card mt-2 mb-4 ml-4 mr-4" style="width: 150px; height: 220px">
                         <div class="card-content is-flex is-justify-content-center is-flex-wrap-wrap" >
