--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -9,9 +9,9 @@
         </div>
     </div>
     <div class="column is-8 ">
-        <div class="card " style="height: 40rem">
+        <div class="card" id="catalog" style="height: 40rem">
             {% include "breadcrumb.html" %}
-            <div class="card-content is-flex is-flex-wrap-wrap is-align-items-center" id="catalog">
+            <div class="card-content is-flex is-flex-wrap-wrap is-align-items-center " >
                 {% for item in page.items %}
                     <div class="card mt-2 mb-4 ml-4 mr-4" style="width: 150px; height: 220px">
                         <div class="card-content is-flex is-justify-content-center is-flex-wrap-wrap" >
