--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,19 +1,19 @@
-    <div class="column is-8 ">
-        <div class="card" id="catalog" style="height: 40rem">
-            {% include "breadcrumb.html" %}
+<div id="catalog" class="column is-8 ">
+    <div class="card" style="height: 40rem">
+        {% include "breadcrumb.html" %}
             <div class="card-content is-flex is-flex-wrap-wrap is-align-items-center " >
                 {% for item in page.items %}
                     <div class="card mt-2 mb-4 ml-4 mr-4" style="width: 150px; height: 220px">
                         <div class="card-content is-flex is-justify-content-center is-flex-wrap-wrap" >
                             <img src="/media/{{ item.image }}" width="100px" height="100px">
                             <div class="content">
-                                {{ item.desc }}
+                            {{ item.desc }}
                             </div>
                         </div>
                     </div>
-                    <br>
+                <br>
                 {% endfor %}
             </div>
         </div>
-        {% include "pagination.html" %}
-    </div>
+    {% include "pagination.html" %}
+</div>
