--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -1,8 +1,8 @@
 <nav class="pagination is-rounded ml-6 ml-6 mt-4" role="navigation" aria-label="pagination">
     {% if page.items.has_previous %}
-            <a href="{{ page.prev_page }}" class="pagination-previous"><<< назад</a>
+            <a href="{{ page.prev_page }}" class="pagination-previous catalog_link"><<< назад</a>
     {% endif %}
     {% if page.items.has_next %}
-            <a href="{{ page.next_page }}" class="pagination-next">вперёд >>></a>
+            <a href="{{ page.next_page }}" class="pagination-next catalog_link">вперёд >>></a>
     {% endif %}
 </nav>
