--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -9,8 +9,10 @@
     <div class="level-item">
       <div class="field has-addons">
           <form action="{% url "search" %}" method="GET">
-                <input class="input" type="text" placeholder="Найти товар" name="search">
-                <button class="button">Поиск</button>
+              <label>
+                  <input class="input" type="text" placeholder="Найти товар" name="search">
+              </label>
+              <button class="button">Поиск</button>
           </form>
       </div>
     </div>
